# wayland

./: .gitignore  LICENSE  README.md  flake.nix  mix.exs
.github/: copilot-instructions.md
.github/workflows/: copilot-setup-steps.yml
config/: config.exs
lib/: wayland_client.ex
lib/wayland_client/: display.ex  example.ex  nif.ex  registry.ex  surface.ex
native/wayland_client/: Cargo.toml
native/wayland_client/src/: lib.rs
test/: wayland_client_test.exs
