[package]
name = "wayland_client_nif"
version = "0.1.0"
edition = "2021"

[lib]
name = "wayland_client_nif"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.30"
wayland-client = "0.31"
wayland-protocols = "0.31"
wayland-sys = "0.31"
nix = "0.28"
thiserror = "1.0"

[dependencies.rustler_sys]
version = "2.4"
optional = true