[package]
name = "wayland_client"
version = "0.1.0"
edition = "2021"

[lib]
name = "wayland_client"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.36.2"
wayland-client = "0.31.11"
wayland-protocols = "0.32.9"
wayland-sys = "0.31.7"
nix = "0.30.1"
thiserror = "2.0.12"
lazy_static = "1.5.0"

[dependencies.rustler_sys]
version = "2.4.3"
optional = true
